	(pull-window): new function
	(focus-forward): new argument pull-p. use pull-window
	(pull-window-by-number): use pull-window
	(other-hidden-window): new function
	(other-window-in-frame): likewise
	("pull-hidden-next"): new command
	("pull-hidden-previous"): likewise
	("pull-hidden-other"): likewise
	("next-in-frame"): likewise
	("prev-in-frame"): likewise
	("other-in-frame"): likewise

2007-01-11  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("putsel"): new command
	("getsel"): likewise

	* stumpwm.asd: properly error out when clx isn't detected.

2007-01-09  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (font-exists-p): rewrite using xlib:list-font-names
	(xwin-grab-keys): only grab the key if it has a corresponding keycode.

	* user.lisp (format-time-string): new function
	(echo-date): call format-time-string

	* version.lisp (*version*): include a compile/load time.

2007-01-08  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (run-prog-collect-output): collect error output as well for sbcl and cmucl
	(split-string): return ("") when splitting the empty string

	* stumpwm.asd (:stumpwm): change around dependencies

	* mode-line.lisp (screen-mode-line-mode): new function

2007-01-07  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (font-exists-p): query something about the font. catch xlib:font-error conditions.

	* primitives.lisp (*run-or-raise-all-groups*): new global var

	* user.lisp (argument-pop-or-read): new function
	(argument-pop-rest-or-read): likewise
	(run-or-raise): search only the current group when
	*run-or-raise-all-groups* is NIL.

2006-12-16  Shawn Betts  <sabetts@vcn.bc.ca>

	* sample-stumpwmrc.lisp: add a call to use-package

	* core.lisp (setup-win-gravity): make sure the window doesn't go
	off the left side of the screen.

	* user.lisp ("windows"): take optional fmt arg
	(argument-line): new struct
	(*command-type-hash*): new global
	(argument-line-end-p): new function
	(argument-pop): likewise
	(argument-pop-rest): likewise